# transtractor-lib

./: .gitignore  .readthedocs.yaml  Cargo.toml  LICENSE  README.md  build.rs  pyproject.toml
.github/workflows/: CI.yml  audit.yml  build-release.yml  ci.yml  tests.yml
data/configs/au/: cba__credit_card__1.json  cba__loan__1.json  nab__classic_banking__1.json
docs/: api_reference.rst  conf.py  configuration.rst  index.rst  installation.rst  requirements.txt  supported_statements.rst
md/: architecture.md  develop.md
python/transtractor/: __init__.py  __init__.pyi  exceptions.py  parser.py  transtractor.pyi
python/transtractor/structs/: statement_data.py  transaction.py
python/transtractor/utils/: default_configs.py  extract.py  testing.py  write.py
scripts/: handle-audit-findings.sh  render-cargo-audit.py  render-coverage.py  render-pip-licenses.py
src/: lib.rs  main.rs
src/checkers/: balances.rs  fields.rs  mod.rs
src/configs/: db.rs  mod.rs  statement_typer.rs  typer.rs
src/configs/au/: cba__credit_card.json  cba__credit_card__1.json  cba__debit__1.json  cba__general__1.json  cba__loan__1.json  nab__classic_banking__1.json
src/configs/registry/: mod.rs
src/configs/utils/: iso_3166_1_alpha_2.rs  mod.rs  validate_key.rs
src/configs/validate/: account_examples.rs  account_number_alignment.rs  account_number_alignment_tol.rs  account_number_patterns.rs  account_number_terms.rs  account_terms.rs  account_type.rs  bank_name.rs  closing_balance_alignment.rs  closing_balance_alignment_tol.rs  closing_balance_formats.rs  closing_balance_terms.rs  fix_text_order.rs  key.rs  mod.rs  opening_balance_alignment.rs  opening_balance_alignment_tol.rs  opening_balance_formats.rs  opening_balance_terms.rs  start_date_alignment.rs  start_date_alignment_tol.rs  start_date_formats.rs  start_date_terms.rs  transaction_alignment_tol.rs  transaction_amount_alignment.rs  transaction_amount_formats.rs  transaction_amount_headers.rs  transaction_amount_invert_alignment.rs  transaction_amount_invert_headers.rs  (+12 more)
src/fixers/: amounts.rs  closing_balance.rs  date.rs  implicit_balance.rs  implicit_date.rs  mod.rs  opening_balance.rs  set_indices.rs  transaction_order.rs
src/formats/: mod.rs
src/parsers/: csv_from_statement_data.rs  dict_from_statement_data.rs  mod.rs  parser.rs  statement_data_from_text_items.rs  text_items_from_pdf.rs
src/python/: exceptions.rs  lib_config_db.rs  lib_parser.rs  mod.rs  utils.rs
src/structs/: mod.rs  proto_transaction.rs  statement_config.rs  statement_data.rs  text_item.rs  text_items.rs  transaction.rs
tests/: golden_layout.rs
tests/fixtures/: test.txt  test1_config.json  test1_config_invalid.json  test1_config_misconfigured.json  test1_debug.txt  test1_layout.txt  test1_layout_5_2.txt  test1_parsed.csv  test1_test.csv  test1_test_NoErrorFreeStatementData.csv  test1_test_StatementNotSupported.csv
tests/python/: test_parser__debug.py  test_parser__layout.py  test_parser__load.py  test_parser__parse.py  test_parser__parse_layout.py  test_parser__test.py
(+79 files in other folders)
