[package]
name = "transtractor"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "transtractor"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.42"
regex = "1.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
once_cell = "1.19"
pyo3 = "0.25.0"

[dev-dependencies]
tempfile = "3.8"
