[package]
name = "transtractor"
version = "0.9.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "transtractor"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.42"
regex = "1.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = "0.27.2"
