[package]
name = "transtractor"
version = "0.9.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "transtractor"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.45"
regex = "1.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
pyo3 = "0.29.0"
