[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "transtractor"
description = "Universal PDF bank statement parsing library"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Daniel Weber", email = "develop@transtractor.net" }
]
keywords = ["pdf", "bank", "statement", "parser", "transaction", "extraction", "csv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
dependencies = [
    "pdfplumber>=0.11.8,<0.12.0",
]

[project.urls]
Homepage = "https://github.com/transtractor/transtractor-lib"
Documentation = "https://transtractor-lib.readthedocs.io"
Repository = "https://github.com/transtractor/transtractor-lib"
Issues = "https://github.com/transtractor/transtractor-lib/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
include = ["python/transtractor/configs/**/*"]
